welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: Missing closing brace `}' assumed here
def move(nbPas: Int,versLAvant: Boolean)={
^